// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfidenceBadge renders high confidence correctly 1`] = `
<div
  className="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-green-100 text-green-800 dark:bg-green-900 dark:text-green-200"
  aria-label="Confidence score: 90%"
>
  90%
</div>
`;

exports[`ConfidenceBadge renders medium confidence correctly 1`] = `
<div
  className="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-yellow-100 text-yellow-800 dark:bg-yellow-900 dark:text-yellow-200"
  aria-label="Confidence score: 65%"
>
  65%
</div>
`;

exports[`ConfidenceBadge renders low confidence correctly 1`] = `
<div
  className="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-red-100 text-red-800 dark:bg-red-900 dark:text-red-200"
  aria-label="Confidence score: 35%"
>
  35%
</div>
`;

exports[`ConfidenceBadge renders with custom className 1`] = `
<div
  className="custom-class inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-green-100 text-green-800 dark:bg-green-900 dark:text-green-200"
  aria-label="Confidence score: 85%"
>
  85%
</div>
`;
